[change] - using dto objects instead of entity for PostController